[gd_scene load_steps=4 format=3 uid="uid://cfxr57uuj8y5x"]

[ext_resource type="Script" uid="uid://6xvspv3s7egj" path="res://source/interface/word_ui.gd" id="1_2o5ae"]
[ext_resource type="FontFile" uid="uid://dcm7ilwpret1f" path="res://assets/fonts/prstartk.ttf" id="2_263t2"]
[ext_resource type="Texture2D" uid="uid://bu4ao5jxvxbt8" path="res://assets/images/interface/power_up_ui.png" id="3_go3o6"]

[node name="WordUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2o5ae")

[node name="PowerUpPanel" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(24, 23)
texture = ExtResource("3_go3o6")
hframes = 2

[node name="Score" type="VBoxContainer" parent="."]
offset_left = 48.0
offset_top = 12.0
offset_right = 108.0
offset_bottom = 34.0
theme_override_constants/separation = 2
alignment = 1

[node name="ScoreTextLabel" type="Label" parent="Score"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.941176, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_263t2")
theme_override_font_sizes/font_size = 10
text = "PONTOS"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Score"]
texture_filter = 1
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_263t2")
theme_override_font_sizes/font_size = 10
text = "x 0"
